--- a/Battleship/pom.xml
+++ b/Battleship/pom.xml
@@ -45,6 +45,13 @@
                         </goals>
                     </execution>
                 </executions>
+                
+                <configuration>
+                    <excludes>
+                        <exclude>battleship</exclude>
+                    </excludes>
+                </configuration>   
+                
             </plugin>  
         </plugins>
     </build>
