--- a/Battleship/pom.xml
+++ b/Battleship/pom.xml
@@ -48,11 +48,35 @@
                 
                 <configuration>
                     <excludes>
-                        <exclude>battleship</exclude>
+                        <exclude>battleship/*</exclude>
+                        <exclude>ui/*</exclude>
+                        <exclude>battleship_ui/*</exclude>
                     </excludes>
                 </configuration>   
                 
             </plugin>  
+            
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-shade-plugin</artifactId>
+                <version>1.6</version>
+                <executions>
+                    <execution>
+                        <phase>package</phase>
+                        <goals>
+                            <goal>shade</goal>
+                        </goals>
+                        <configuration>
+                            <transformers>
+                                <transformer implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
+                                    <mainClass>battleship.Main</mainClass>
+                                </transformer>
+                            </transformers>
+                        </configuration>
+                    </execution>
+                </executions>
+            </plugin>
+            
         </plugins>
     </build>
     
